<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/inbox"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/servicos"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/cliente"
            android:title="@string/menu_clientes" />


    </group>

    <item android:title="entre em contato">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/email"
                android:title="@string/menu_contatos" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>
